# airplay-esp32

./: .gitignore  CLAUDE.md  CMakeLists.txt  SKILLS.md  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esparagus-audio-brick  sdkconfig.defaults.esparagus-louder  sdkconfig.defaults.squeezeamp  sdkconfig.defaults.squeezeamp-4m  sdkconfig.defaults.wrover  sdkconfig.defaults.xiao-s3
.github/workflows/: firmware.yml
components/boards/: Kconfig.projbuild
components/cspot/: CMakeLists.txt  linker.lf
components/cspot/cspot_lib/: CMakeLists.txt
components/cspot/cspot_lib/bell/: CMakeLists.txt
components/cspot/cspot_lib/bell/main/io/: URLParser.cpp
components/dlna_renderer/: CMakeLists.txt  dlna_audio.c  dlna_didl.c  dlna_http.c  dlna_internal.h  dlna_renderer.c  dlna_ssdp.c
components/dlna_renderer/descriptors/: avtransport_scpd.h  connmgr_scpd.h  root_desc_template.h
components/dlna_renderer/include/: dlna_renderer.h
components/spotify_connect/: CMakeLists.txt  spotify_connect.cpp
components/spotify_connect/include/: spotify_connect.h
data/www/: index.html  nowplaying.html
main/: CMakeLists.txt  Kconfig.projbuild  main.c  now_playing_store.c  now_playing_store.h  playback_control.h  settings.c  settings.h
main/audio/: audio_output.c  audio_output.h  audio_timing.c
main/network/: mdns_airplay.c  web_server.c  web_server.h  wifi.c
main/plist/: bplist_parser.c  plist.h
main/rtsp/: rtsp_events.h  rtsp_handlers.c  rtsp_handlers.h  rtsp_server.c
scripts/: README.md  flash.sh  monitor.sh  push.sh  release.sh
tools/ci/: package_firmware.py
